# swigTest

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  library.cpp  library.h  library.hpp
src/swig/: CMakeLists.txt
src/swig/matlab/: CMakeLists.txt  library.i
src/swig/python/: CMakeLists.txt  library.i
